--- a/jwt_token_mongodb/views/index.ejs
+++ b/jwt_token_mongodb/views/index.ejs
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <div class="w-full h-screen bg-zinc-900"></div>
   </body>
 </html>
